--- a/app/styles/messages.css
+++ b/app/styles/messages.css
@@ -1,6 +1,12 @@
-.ais-Hits-list {
+.ais-InfiniteHits-list {
 	display: flex;
 	flex-direction: row;
 	flex-wrap: wrap;
 	list-style-type: none; /* Remove bullets */
+}
+
+.ais-InfiniteHits-loadMore {
+	border: 1px solid black;
+	border-radius: 5px;
+	padding: 0.5rem 1rem 0.5rem 1rem;
 }
