--- a/app/styles/global.css
+++ b/app/styles/global.css
@@ -1,3 +1,9 @@
+@font-face {
+	font-family: 'Novecento Sans Wide';
+	font-weight: bold;
+	src: url('../../static/fonts/Novecentosanswide-Bold.otf') format('opentype');
+}
+
 .react-player {
 	position: absolute;
 	top: 0;
