--- a/app/styles/global.css
+++ b/app/styles/global.css
@@ -1,7 +1,7 @@
 @font-face {
 	font-family: 'Novecento Sans Wide';
 	font-weight: bold;
-	src: url('../../static/fonts/Novecentosanswide-Bold.otf') format('opentype');
+	src: url('/fonts/Novecentosanswide-Bold.otf') format('opentype');
 }
 
 .react-player {
