add another font

--- a/app/styles/global.css
+++ b/app/styles/global.css
@@ -4,6 +4,12 @@
 	src: url('/fonts/Novecentosanswide-Bold.otf') format('opentype');
 }
 
+@font-face {
+	font-family: 'Montserrat';
+	font-weight: normal;
+	src: url('/fonts/Montserrat-Regular.otf') format('opentype');
+}
+
 .react-player {
 	position: absolute;
 	top: 0;
